--- a/src/renderer/traymenu.html
+++ b/src/renderer/traymenu.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" lang="zh" />
-    <title>Sparkle Tray Menu</title>
+    <title>SparkleMe Tray Menu</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src * data:; frame-src http://127.0.0.1:*;"
